<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="search_label">Search</string>
    <string name="title_activity_search_options">SearchOptionsActivity</string>
    <string name="advance_search_options">Advance Search Options</string>
    <string name="search_options">Options</string>
    
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>

</resources>